change font to .85rem

--- a/projects/dna_crochet_pattern/index.html
+++ b/projects/dna_crochet_pattern/index.html
@@ -3,6 +3,7 @@
 /* webkit printing magic: print all background colors */
 html {
 	-webkit-print-color-adjust: exact;
+	font-size:0.85rem;
 }
 * {
 	box-sizing: border-box;
@@ -25,7 +26,6 @@ body {
 body {
 	line-height: 1.5;
 	white-space: pre-wrap;
-	font-size: 13px;
 }
 
 a,
