--- a/projects/dna_crochet_pattern/index.html
+++ b/projects/dna_crochet_pattern/index.html
@@ -1,4 +1,16 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>DNA crochet plushie!</title><style>
+<html>
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150898356-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-150898356-1');
+</script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>DNA crochet plushie!</title>
+<style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
